--- a/styles/inicio-sesion.css
+++ b/styles/inicio-sesion.css
@@ -128,12 +128,27 @@ form{
     color:white;
 }
 
-.navDescartables {
-
-    display: none;
-}
-
 .navHeaderLogin {
 
     width: 10rem;
+}
+
+.mensajeError{
+    color: red;
+}
+
+@media screen and (max-width:769px){
+
+
+    .navHeaderLogin {
+        
+        width: 100%;
+
+        .ulNav {
+
+            width: 100%;
+            display: flex;
+            align-items: canter;
+        }
+    }
 }
