--- a/styles/styleRegistro.css
+++ b/styles/styleRegistro.css
@@ -39,7 +39,7 @@ body{
         padding-bottom: 1rem;
         animation-name: animationForm;
         animation-duration: 1s;
-
+        margin-top: 12rem;
         
         form {
             display: flex;
@@ -82,13 +82,18 @@ body{
     }
 }
 
-@media screen and (min-width:769px){
+@media screen and (max-width:769px){
+    
+    .navHeaderRegistro {
+
+        margin: 0 auto;
+        width: 100%;
+    }
+
     .registro{
         .container{
-            margin-top: 5rem;
+            margin-top: 15rem;
         }
-
-
     }
 
 }
@@ -115,4 +120,8 @@ body{
 .navHeaderRegistro {
 
     width: 10rem;
+}
+
+.mensajeError{
+    color: red;
 }
